# Chiral-CrossDistro-Package-Manager

./: Cargo.toml  README.md  install.sh
.github/scripts/: sync-arch.sh
.github/workflows/: release.yml
src/: lib.rs  main.rs
